--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
+    "cryptiles": "^4.1.3",
     "css-mqpacker": "^6.0.1",
     "cssnano": "^3.10.0",
+    "debug": "^4.1.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
     "gulp-concat": "^2.6.1",
@@ -24,11 +26,16 @@
     "gulp-uglify": "^3.0.0",
     "gulp-uncss": "^1.0.6",
     "gulp-util": "^3.0.8",
+    "hoek": "^6.1.3",
+    "lodash": "^4.17.11",
     "macaddress": "^0.2.9",
+    "minimatch": "^3.0.4",
     "postcss-assets": "^5.0.0",
     "postcss-inline-svg": "^3.0.0",
     "postcss-pxtorem": "^4.0.1",
+    "randomatic": "^3.1.1",
     "sort-css-media-queries": "^1.4.1",
+    "sshpk": "^1.16.1",
     "tar": "^4.4.8"
   },
   "dependencies": {
