--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-mqpacker": "^6.0.1",
     "cssnano": "^3.10.0",
     "debug": "^4.1.1",
+    "extend": "^3.0.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
     "gulp-concat": "^2.6.1",
