--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Default Worpress Theme",
+  "name": "HelpDez",
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
@@ -11,8 +11,10 @@
   "author": "Box Agency",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
+    "bootstrap": "^4.3.1",
     "cryptiles": "^4.1.3",
     "css-mqpacker": "^6.0.1",
     "cssnano": "^3.10.0",
@@ -30,6 +32,7 @@
     "lodash": "^4.17.11",
     "macaddress": "^0.2.9",
     "minimatch": "^3.0.4",
+    "node-sass": "^4.12.0",
     "postcss-assets": "^5.0.0",
     "postcss-inline-svg": "^3.0.0",
     "postcss-pxtorem": "^4.0.1",
@@ -38,8 +41,5 @@
     "sshpk": "^1.16.1",
     "tar": "^4.4.8"
   },
-  "dependencies": {
-    "babel-core": "^6.26.3",
-    "node-sass": "^4.12.0"
-  }
+  "dependencies": {}
 }
