--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-uncss": "^1.0.6",
     "gulp-util": "^3.0.8",
     "hoek": "^6.1.3",
+    "js-yaml": "^3.13.1",
     "lodash": "^4.17.11",
     "macaddress": "^0.2.9",
     "minimatch": "^3.0.4",
